--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,13 @@
 body {
-  text-align: center;
   background-color: #283149;
+  text-align: center;
 }
 
 h1 {
-  font-size: 5rem;
   color: #DBEDF3;
   font-family: "Arvo", cursive;
+  font-size: 5rem;
   text-shadow: 3px 0 #DA0463;
-
 }
 
 footer {
@@ -17,31 +16,31 @@ footer {
 }
 
 .w {
-
+  background-image: url("images/tom1.png");
 }
 
 .a {
-
+  background-image: url("images/tom2.png");
 }
 
 .s {
-
+  background-image: url("images/tom3.png");
 }
 
 .d {
-
+  background-image: url("images/tom4.png");
 }
 
 .j {
-
+  background-image: url("images/snare.png");
 }
 
 .k {
-
+  background-image: url("images/crash.png");
 }
 
 .l {
-
+  background-image: url("images/kick.png");
 }
 
 .set {
