--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,21 @@
 body {
-  background-color: #283149;
+  background-color: #c4ffed;
   text-align: center;
 }
 
 h1 {
-  color: #DBEDF3;
+  color: #283149;
   font-family: "Arvo", cursive;
   font-size: 5rem;
-  text-shadow: 3px 0 #DA0463;
 }
 
 footer {
-  color: #DBEDF3;
+  color: #283149;
   font-family: sans-serif;
+}
+
+.set {
+  margin: 10% auto;
 }
 
 .w {
@@ -43,38 +46,23 @@ footer {
   background-image: url("images/kick.png");
 }
 
-.set {
-  margin: 10% auto;
-}
-
-.game-over {
-  background-color: red;
-  opacity: 0.8;
+.drum {
+  background-color: white;
+  border: 10px solid #404b69;
+  border-radius: 15px;
+  color: #da4004;
+  display: inline-block;
+  font-family: 'Arvo', cursive;
+  font-size: 5rem;
+  font-weight: 900;
+  height: 150px;
+  line-height: 2;
+  margin: 10px;
+  text-align: center;
+  width: 150px;
 }
 
 .pressed {
-  box-shadow: 0 3px 4px 0 #DBEDF3;
+  box-shadow: 0 3px 4px 0 #dbedf3;
   opacity: 0.5;
-}
-
-.red {
-  color: red;
-}
-
-.drum {
-  outline: none;
-  border: 10px solid #404B69;
-  font-size: 5rem;
-  font-family: 'Arvo', cursive;
-  line-height: 2;
-  font-weight: 900;
-  color: #DA0463;
-  text-shadow: 3px 0 #DBEDF3;
-  border-radius: 15px;
-  display: inline-block;
-  width: 150px;
-  height: 150px;
-  text-align: center;
-  margin: 10px;
-  background-color: white;
 }
